file(GLOB_RECURSE QCONSOLE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE QCONSOLE_HEADERS ${PROJECT_SOURCE_DIR}/include/*.hpp)

add_library(${QCONSOLE}
    ${QCONSOLE_SOURCES}
    ${QCONSOLE_HEADERS}
    )

target_include_directories(${QCONSOLE}
    PUBLIC ${PROJECT_SOURCE_DIR}/include
    )
